syntax = "proto3";

package go.micro.srv.smtp;

service SMTP {
	rpc Send(SendRequest) returns (SendResponse) {}
	rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse) {}
}

message SendRequest {
  repeated string recipient = 1;
  string subject = 2;
  string body = 3;
}

message SendResponse {

}

message SetSettingsRequest {
  string email_host = 1;
  string email_host_port = 2;
  string email_host_user = 3;
  string email_host_password = 4;
  string default_from_email = 5;
}

message SetSettingsResponse {

}
